--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "2.8.3",
     "prettier-eslint": "^15.0.1",
-    "prettier-eslint-cli": "^7.1.0"
+    "prettier-eslint-cli": "^7.1.0",
+    "sass": "^1.58.0"
   }
 }
